<resources>
    <string name="app_name">Jamaat Sweden</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Islams Ahmadiyya Församling</string>
    <string name="nav_header_subtitle">alislam.org</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_events">Events</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_news">News</string>



    <string name="ageRange_prompt">Choose a Majlis</string>
    <string name="location_prompt">Choose a Mosque</string>
    <string name="title_hint">Title</string>
    <string name="start_date_button_text">Choose Start Time</string>
    <string name="end_date_button_text">Choose End Time</string>
    <string name="lunch_served">Lunch Served</string>
    <string name="description_hint">Description</string>
    <string name="start_time">No time chosen</string>
    <string name="end_time">No time chosen</string>
    <string name="add_event">Add Event</string>
    <string name="select_age_range_s">Select Majlis</string>

</resources>