<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Spinner for Majlis names -->
    <Spinner
        android:id="@+id/ageRangespinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:prompt="@string/ageRange_prompt" />

    <!-- Spinner for Mosque names -->
    <Spinner
        android:id="@+id/location_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:prompt="@string/location_prompt" />

    <!-- Input for Title -->
    <EditText
        android:id="@+id/title_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_hint"
        android:minHeight="48dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <!-- Start Date Picker Row -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_date_button_text" />

            <TextView
                android:id="@+id/start_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/start_time"
                android:textColor="#757575"
                android:textSize="18sp"
                android:minHeight="48dp" />

        </TableRow>

        <!-- End Date Picker Row -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_date_button_text" />

            <TextView
                android:id="@+id/end_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/end_time"
                android:textColor="#757575"
                android:textSize="18sp"
                android:minHeight="48dp" />

        </TableRow>

    </TableLayout>

    <!-- Checkbox for Lunch Served -->
    <CheckBox
        android:id="@+id/lunch_served_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lunch_served" />

    <!-- Input for Description -->
    <EditText
        android:id="@+id/description_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description_hint"
        android:inputType="textMultiLine"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btn_add_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_event" />

</LinearLayout>
