<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_events">

    <fragment
        android:id="@+id/nav_events"
        android:name="com.example.event_viewer.ui.home.HomeFragment"
        android:label="@string/menu_events"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.event_viewer.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_news"
        android:name="com.example.event_viewer.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_slideshow" />
</navigation>